--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/components/ui/PressureText.js", "app/components/ui/ShinyButton.js"],
   "exclude": ["node_modules"]
 }
