--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@splinetool/react-spline": "^4.0.0",
+    "@upstash/redis": "^1.34.9",
     "bcryptjs": "^3.0.0",
     "chart.js": "^4.4.9",
     "framer-motion": "^12.10.5",
@@ -27,8 +28,7 @@
     "react-doc-viewer-plus": "^1.0.4",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-select": "^5.10.1",
-    "rive-react": "^4.19.1"
+    "react-select": "^5.10.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
